--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
         "homebridge": ">=0.2.0"
     },
     "dependencies": {
-        "request": "2.49.x"
+        "request": "^2.88.0"
     }
 }
