--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "devDependencies": {
         "@types/node": "^12.12.21",
+        "tslint": "^6.1.1",
         "typescript": "^3.7.4"
     }
 }
