--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "homebridge-glue",
-    "version": "2.1.0",
+    "version": "3.0.0-beta",
     "description": "Glue Smart Lock integration for Homebridge",
     "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "prepublish": "tsc"
     },
     "author": {
         "name": "Tobias Jeppesen"
@@ -23,11 +25,27 @@
     },
     "engines": {
         "node": ">=0.12.0",
-        "homebridge": ">=0.2.0"
+        "homebridge": ">=1.0.0"
     },
     "devDependencies": {
-        "@types/node": "^12.12.21",
-        "tslint": "^6.1.1",
+        "@types/node": "^12.19.15",
+        "@typescript-eslint/eslint-plugin": "^4.14.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^4.14.1",
+        "@typescript-eslint/parser": "^4.14.0",
+        "eslint": "^7.18.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsdoc": "^31.3.3",
+        "eslint-plugin-prefer-arrow": "^1.2.2",
+        "homebridge": "^1.2.3",
+        "tslint": "^6.1.3",
         "typescript": "^3.7.4"
-    }
+    },
+    "dependencies": {
+        "axios": "^0.21.1"
+    },
+    "eslintIgnore": [
+        "node_modules",
+        "dist",
+        "homebridge"
+    ]
 }
