--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsc",
-        "prepublish": "tsc"
+        "prepare": "tsc"
     },
     "author": {
         "name": "Tobias Jeppesen"
