--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "homebridge-glue",
-    "version": "3.0.0-beta",
+    "version": "3.0.0",
     "description": "Glue Smart Lock integration for Homebridge",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
