--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "homebridge-glue",
-    "version": "3.0.0",
+    "version": "3.0.4",
     "description": "Glue Smart Lock integration for Homebridge",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -27,6 +27,9 @@
         "node": ">=0.12.0",
         "homebridge": ">=1.0.0"
     },
+    "files": [
+        "dist"
+    ],
     "devDependencies": {
         "@types/node": "^12.19.15",
         "@typescript-eslint/eslint-plugin": "^4.14.0",
